# business-radar-core

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
business_radar_core/: __init__.py
business_radar_core/locales/: __init__.py  kk.py  ru.py
business_radar_core/models/: __init__.py  user.py
business_radar_core/modules/: __init__.py  debt.py  hiring.py  idea.py  import_mod.py  market.py
business_radar_core/utils/: __init__.py  llm.py  narrative.py  slang.py
tests/: test_bot.py  test_full_bot.py  test_narrative.py  test_slang.py
